--- a/Homework 2/Latex/Homework2_cs4570.tex
+++ b/Homework 2/Latex/Homework2_cs4570.tex
@@ -501,6 +501,1062 @@ two broad transcriptional regimes rather than five sharply separated classes.
 \newpage
 \appendix
 \section{Appendix: Code Implementation}
+\subsection{Problem 1b.}
+\begin{python}
+'''
+Author: Chuyang Su cs4570@columbia.edu
+Date: 2025-10-29 17:59:43
+LastEditTime: 2025-10-30 14:06:41
+FilePath: /Unsupervised-Learning-Homework/Homework 2/Code/Problem_1_b.py
+Description: 
+    EM algorithm for a mixture of Poisson distributions and fit to the author data with K = 4 clusters.
+'''
+import os
+import json
+import numpy as np
+import pandas as pd
+
+DATA_PATH = r"Homework 2\Code\Data\authors.csv"
+RESULT_DIR = r"Homework 2\Code\Result"
+os.makedirs(RESULT_DIR, exist_ok=True)
+
+def load_author_data(path):
+    df = pd.read_csv(path)
+    cols = list(df.columns)
+
+    author_col = "" if "" in cols else cols[0]
+
+    # Drop BookID column if exists
+    df = df.drop(columns=cols[-1])
+
+    y_names, y = np.unique(df[author_col].astype(str).values, return_inverse=True)
+    feat_cols = [c for c in df.columns if c != author_col]
+    X = df[feat_cols].to_numpy(dtype=float)
+
+    return X, y, y_names, feat_cols 
+
+class PoissonMixtureResult:
+    __slots__ = ("pi", "lmbda", "gamma", "loglik_hist", "converged", "n_iter")
+    def __init__(self, pi, lmbda, gamma, loglik_hist, converged, n_iter):
+        self.pi = pi
+        self.lmbda = lmbda
+        self.gamma = gamma
+        self.loglik_hist = loglik_hist
+        self.converged = converged
+        self.n_iter = n_iter
+
+def _softmax_logspace(logW, axis=1):
+    m = np.max(logW, axis=axis, keepdims=True)
+    W = np.exp(logW - m)
+    W /= W.sum(axis=axis, keepdims=True)
+    return W
+
+def _logsumexp(A, axis=1):
+    m = np.max(A, axis=axis, keepdims=True)
+    return (m + np.log(np.sum(np.exp(A - m), axis=axis, keepdims=True))).squeeze(axis)
+
+def _init_params(X, K, random_state=None):
+    rng = np.random.default_rng(random_state)
+    n, p = X.shape
+    gamma = rng.dirichlet(alpha=np.ones(K), size=n)
+    Nk = gamma.sum(axis=0) + 1e-16
+    pi = Nk / Nk.sum()
+    lmbda = (gamma.T @ X) / Nk[:, None]
+    lmbda = np.clip(lmbda, 1e-8, None)
+    return pi, lmbda, gamma
+
+def poisson_mixture_em(X, K, tol=1e-6, max_iter=500, random_state=None, verbose=False):
+    X = np.asarray(X, dtype=float)
+    if np.any(X < 0) or (np.abs(X - np.round(X)) > 1e-10).any():
+        raise ValueError("X must be nonnegative integer counts.")
+    n, p = X.shape
+    rng = np.random.default_rng(random_state)
+
+    pi, lmbda, gamma = _init_params(X, K, random_state=rng)
+    loglik_hist = []
+    eps = 1e-12
+
+    for it in range(1, max_iter + 1):
+        log_pi = np.log(np.clip(pi, eps, 1.0))
+        log_lambda = np.log(np.clip(lmbda, eps, None))
+        log_px_given_k = X @ log_lambda.T - np.sum(lmbda, axis=1)[None, :]
+        log_w = log_pi[None, :] + log_px_given_k
+        gamma = _softmax_logspace(log_w, axis=1)
+
+        Nk = gamma.sum(axis=0) + eps
+        pi = Nk / n
+        lmbda = (gamma.T @ X) / Nk[:, None]
+        lmbda = np.clip(lmbda, 1e-12, None)
+
+        ll_vec = _logsumexp(log_w, axis=1)
+        ll = float(ll_vec.sum())
+        loglik_hist.append(ll)
+
+        if it > 1:
+            ll_prev = loglik_hist[-2]
+            denom = max(1.0, abs(ll_prev))
+            if (ll - ll_prev) / denom < tol:
+                return PoissonMixtureResult(pi, lmbda, gamma, loglik_hist, True, it)
+
+    return PoissonMixtureResult(pi, lmbda, gamma, loglik_hist, False, max_iter)
+
+def poisson_mixture_predict_proba(X, result):
+    X = np.asarray(X, dtype=float)
+    log_pi = np.log(np.clip(result.pi, 1e-12, 1.0))
+    log_lambda = np.log(np.clip(result.lmbda, 1e-12, None))
+    log_px_given_k = X @ log_lambda.T - np.sum(result.lmbda, axis=1)[None, :]
+    log_w = log_pi[None, :] + log_px_given_k
+    return _softmax_logspace(log_w, axis=1)
+
+def poisson_mixture_predict(X, result):
+    return np.argmax(poisson_mixture_predict_proba(X, result), axis=1)
+
+# Main function
+if __name__ == "__main__":
+    X, y, y_names, feat_cols = load_author_data(DATA_PATH)
+
+    K = len(y_names)
+    res = poisson_mixture_em(X, K=K, tol=1e-6, max_iter=1000, random_state=0, verbose=False)
+    hard = poisson_mixture_predict(X, res)
+
+    cont = np.zeros((K, K), dtype=int)
+    for yi, hi in zip(y, hard):
+        cont[yi, hi] += 1
+    purity = float(cont.max(axis=0).sum() / len(y))
+    cluster_to_author = {int(k): str(y_names[int(np.argmax(cont[:, k]))]) for k in range(K)}
+
+    threshold = 0.6
+    max_resp = res.gamma.max(axis=1)
+    low_certainty_idx = np.where(max_resp < threshold)[0].tolist()
+
+    low_certainty_info = []
+    for i in low_certainty_idx:
+        low_certainty_info.append({
+            "chapter_index": int(i),
+            "author_true": str(y_names[y[i]]),
+            "pred_cluster": int(hard[i]),
+            "max_gamma": float(max_resp[i]),
+            "responsibilities": [float(v) for v in res.gamma[i]]
+        })
+
+    out_path = os.path.join(RESULT_DIR, f"poisson_mixture_result.json")
+    result_json = {
+        "converged": bool(res.converged),
+        "n_iter": int(res.n_iter),
+        "final_loglik": float(res.loglik_hist[-1]),
+        "n_authors": int(K),
+        "authors": y_names.tolist(),
+        "feature_columns": feat_cols,
+        "em": {
+            "pi": res.pi.astype(float).tolist(),
+            "lambda": res.lmbda.astype(float).tolist(),
+            "loglik_hist": [float(v) for v in res.loglik_hist]
+        },
+        "predictions": {
+            "cluster_pred": [int(v) for v in hard],
+            "responsibilities": res.gamma.astype(float).tolist()
+        },
+        "validation": {
+            "purity": float(purity),
+            "contingency": cont.astype(int).tolist(),
+            "cluster_sizes": np.bincount(hard, minlength=K).astype(int).tolist(),
+            "cluster_to_author_map": {str(k): v for k, v in cluster_to_author.items()},
+            "low_certainty_chapters": low_certainty_info,
+            "threshold": float(threshold)
+        }
+    }
+
+    with open(out_path, "w", encoding="utf-8") as f:
+        json.dump(result_json, f, ensure_ascii=False, indent=2)
+\end{python}
+
+\subsection{Problem 1c.}
+\begin{python}
+'''
+Author: Chuyang Su cs4570@columbia.edu
+Date: 2025-10-29 21:47:48
+LastEditTime: 2025-10-30 14:15:24
+FilePath: /Unsupervised-Learning-Homework/Homework 2/Code/Problem_1_c.py
+Description: 
+    Fit a Gaussian mixture model to the author data.
+'''
+import os
+import json
+import numpy as np
+import pandas as pd
+
+DATA_PATH = r"Homework 2\Code\Data\authors.csv"
+RESULT_DIR = r"Homework 2\Code\Result"
+os.makedirs(RESULT_DIR, exist_ok=True)
+
+from Problem_1_b import load_author_data
+
+class GMMResult:
+    __slots__ = ("pi", "mu", "var", "gamma", "loglik_hist", "converged", "n_iter")
+    def __init__(self, pi, mu, var, gamma, loglik_hist, converged, n_iter):
+        self.pi = pi          # (K,)
+        self.mu = mu          # (K, p)
+        self.var = var        # (K, p)  diagonal covariances
+        self.gamma = gamma    # (n, K)
+        self.loglik_hist = loglik_hist
+        self.converged = converged
+        self.n_iter = n_iter
+
+def _log_gauss_diag(X, mu, var):
+    eps = 1e-10
+    var = np.clip(var, eps, None)
+    n, p = X.shape
+    K = mu.shape[0]
+    log_det = np.sum(np.log(var), axis=1)
+    inv_var = 1.0 / var
+    quad = ((X[:, None, :] - mu[None, :, :]) ** 2 * inv_var[None, :, :]).sum(axis=2)
+    return -0.5 * (p * np.log(2.0 * np.pi) + log_det[None, :] + quad)
+
+def _softmax_logspace(logW, axis=1):
+    m = np.max(logW, axis=axis, keepdims=True)
+    W = np.exp(logW - m)
+    W /= W.sum(axis=axis, keepdims=True)
+    return W
+
+def _logsumexp(A, axis=1):
+    m = np.max(A, axis=axis, keepdims=True)
+    return (m + np.log(np.sum(np.exp(A - m), axis=axis, keepdims=True))).squeeze(axis)
+
+def _init_gmm_params(X, K, random_state=None):
+    rng = np.random.default_rng(random_state)
+    n, p = X.shape
+    mu = np.empty((K, p))
+    idx0 = rng.integers(0, n)
+    mu[0] = X[idx0]
+    d2 = np.sum((X - mu[0])**2, axis=1) + 1e-12
+    for k in range(1, K):
+        probs = d2 / d2.sum()
+        idx = rng.choice(n, p=probs)
+        mu[k] = X[idx]
+        d2 = np.minimum(d2, np.sum((X - mu[k])**2, axis=1) + 1e-12)
+    dist2 = ((X[:, None, :] - mu[None, :, :])**2).sum(axis=2)
+    gamma = np.zeros((n, K))
+    gamma[np.arange(n), np.argmin(dist2, axis=1)] = 1.0
+    Nk = gamma.sum(axis=0) + 1e-12
+    pi = Nk / n
+    var = (gamma.T @ (X**2)) / Nk[:, None] - ( (gamma.T @ X) / Nk[:, None] )**2
+    var = np.clip(var, 1e-6, None)
+    return pi, mu, var, gamma
+
+def gaussian_mixture_em(
+    X, K, tol=1e-6, max_iter=500, random_state=None, verbose=False
+):
+    X = np.asarray(X, dtype=float)
+    n, p = X.shape
+    eps = 1e-12
+
+    pi, mu, var, gamma = _init_gmm_params(X, K, random_state=random_state)
+    loglik_hist = []
+
+    for it in range(1, max_iter + 1):
+        # E-step
+        log_pi = np.log(np.clip(pi, eps, 1.0))  # (K,)
+        log_px_given_k = _log_gauss_diag(X, mu, var)  # (n,K)
+        log_w = log_pi[None, :] + log_px_given_k
+        gamma = _softmax_logspace(log_w, axis=1)      # (n,K)
+
+        # M-step
+        Nk = gamma.sum(axis=0) + eps                  # (K,)
+        pi = Nk / n
+        mu = (gamma.T @ X) / Nk[:, None]              # (K,p)
+        # diagonal covariance
+        Ex2 = (gamma.T @ (X**2)) / Nk[:, None]        # (K,p)
+        var = Ex2 - mu**2
+        var = np.clip(var, 1e-6, None)
+
+        # Log-likelihood
+        ll = float(_logsumexp(log_w, axis=1).sum())
+        loglik_hist.append(ll)
+
+        if verbose and (it == 1 or it % 10 == 0):
+            print(f"Iter {it:4d}  loglik={ll:.6f}")
+
+        if it > 1:
+            ll_prev = loglik_hist[-2]
+            denom = max(1.0, abs(ll_prev))
+            if (ll - ll_prev) / denom < tol:
+                if verbose:
+                    print(f"Converged at iter {it}  Δrel={(ll-ll_prev)/denom:.3e}")
+                return GMMResult(pi, mu, var, gamma, loglik_hist, True, it)
+
+    if verbose:
+        print("Reached max_iter without convergence.")
+    return GMMResult(pi, mu, var, gamma, loglik_hist, False, max_iter)
+
+def gmm_predict_proba(X, result):
+    log_pi = np.log(np.clip(result.pi, 1e-12, 1.0))
+    log_px_given_k = _log_gauss_diag(X, result.mu, result.var)
+    log_w = log_pi[None, :] + log_px_given_k
+    return _softmax_logspace(log_w, axis=1)
+
+def gmm_predict(X, result):
+    return np.argmax(gmm_predict_proba(X, result), axis=1)
+
+# Main function
+if __name__ == "__main__":
+    X, y, y_names, feat_cols = load_author_data(DATA_PATH)
+    K = len(y_names)
+
+    res = gaussian_mixture_em(
+        X, K=K, tol=1e-6, max_iter=1000, random_state=0, verbose=False
+    )
+    hard = gmm_predict(X, res)
+
+    cont = np.zeros((K, K), dtype=int)
+    for yi, hi in zip(y, hard):
+        cont[yi, hi] += 1
+    purity = float(cont.max(axis=0).sum() / len(y))
+    cluster_to_author = {
+        str(k): str(y_names[int(np.argmax(cont[:, k]))]) for k in range(K)
+    }
+
+    threshold = 0.6
+    max_resp = res.gamma.max(axis=1)
+    low_idx = np.where(max_resp < threshold)[0].tolist()
+    low_certainty_info = []
+    for i in low_idx:
+        low_certainty_info.append({
+            "chapter_index": int(i),
+            "author_true": str(y_names[y[i]]),
+            "pred_cluster": int(hard[i]),
+            "max_gamma": float(max_resp[i]),
+            "responsibilities": [float(v) for v in res.gamma[i]]
+        })
+
+    out_path = os.path.join(RESULT_DIR, f"gmm_result.json")
+
+    result_json = {
+        "converged": bool(res.converged),
+        "n_iter": int(res.n_iter),
+        "final_loglik": float(res.loglik_hist[-1]),
+        "n_authors": int(K),
+        "authors": y_names.tolist(),
+        "feature_columns": feat_cols,
+        "em": {
+            "pi": res.pi.astype(float).tolist(),
+            "mu": res.mu.astype(float).tolist(),
+            "var_diag": res.var.astype(float).tolist(),
+            "loglik_hist": [float(v) for v in res.loglik_hist]
+        },
+        "predictions": {
+            "cluster_pred": [int(v) for v in hard],
+            "responsibilities": res.gamma.astype(float).tolist()
+        },
+        "validation": {
+            "purity": float(purity),
+            "contingency": cont.astype(int).tolist(),
+            "cluster_sizes": np.bincount(hard, minlength=K).astype(int).tolist(),
+            "cluster_to_author_map": {str(k): v for k, v in cluster_to_author.items()},
+            "low_certainty_chapters": low_certainty_info,
+            "threshold": float(threshold)
+        }
+    }
+
+    with open(out_path, "w", encoding="utf-8") as f:
+        json.dump(result_json, f, ensure_ascii=False, indent=2)
+\end{python}
+
+\subsection{Problem 2a.}
+\begin{python}
+'''
+Author: Chuyang Su cs4570@columbia.edu
+Date: 2025-10-30 14:36:11
+LastEditTime: 2025-10-31 02:14:40
+FilePath: /Unsupervised-Learning-Homework/Homework 2/Code/Problem_2_a.py
+Description: 
+    Apply clustering techniques(KMeans, GMM, Spectral Clustering, Agglomerative Clustering, DBSCAN) to explore the BRCA gene expression data set.
+'''
+import os
+os.environ.setdefault("OMP_NUM_THREADS", "2")
+os.environ.setdefault("MKL_NUM_THREADS", "2")
+os.environ.setdefault("LOKY_MAX_CPU_COUNT", "8")
+
+import warnings
+from matplotlib import MatplotlibDeprecationWarning
+warnings.filterwarnings("ignore", category=UserWarning,
+                        message="n_jobs value 1 overridden to 1 by setting random_state",
+                        module=r"umap\.umap_")
+warnings.filterwarnings("ignore", category=UserWarning,
+                        message="KMeans is known to have a memory leak on Windows with MKL",
+                        module=r"sklearn\.cluster\._kmeans")
+warnings.filterwarnings("ignore", category=UserWarning,
+                        message="Could not find the number of physical cores",
+                        module=r"joblib\.externals\.loky\.backend\.context")
+warnings.filterwarnings("ignore", category=MatplotlibDeprecationWarning)
+
+from pathlib import Path
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import matplotlib as mpl
+
+from sklearn.preprocessing import StandardScaler
+from sklearn.decomposition import PCA
+from sklearn.cluster import KMeans, SpectralClustering, AgglomerativeClustering, DBSCAN
+from sklearn.mixture import GaussianMixture
+from packaging.version import parse as vparse
+import sklearn
+import umap
+
+def load_brca(data_path: str):
+    df = pd.read_csv(data_path, index_col=0)
+    df.columns = (
+        df.columns.astype(str)
+        .str.strip()
+        .str.replace("-", "_", regex=False)
+        .str.replace(" ", "_", regex=False)
+        .str.lower()
+    )
+    clinical_cols = [c for c in ["subtype", "er_status", "pr_status", "her2_status", "node", "metastasis"]
+                     if c in df.columns]
+    gene_cols = [c for c in df.columns if c not in clinical_cols]
+
+    X = df[gene_cols].apply(pd.to_numeric, errors="coerce")
+    X = X.fillna(X.median())
+    X = StandardScaler().fit_transform(X.values)
+
+    meta = df[clinical_cols].copy()
+    return X, meta
+
+def _encode(series):
+    cats = series.astype(str).fillna("NA").values
+    uniq = sorted(np.unique(cats))
+    mapping = {c: i for i, c in enumerate(uniq)}
+    idx = np.array([mapping[c] for c in cats], dtype=int)
+    return idx, mapping
+
+PAM50_COLOR_MAP = {
+    "Luminal A": "#1f77b4",     # blue
+    "Luminal B": "#2ca02c",     # green
+    "Basal-like": "#ff7f0e",    # orange
+    "HER2-enriched": "#d62728", # red
+    "Normal-like": "#9467bd",   # purple
+}
+
+def scatter_by_labels(
+    X2,
+    labels,
+    title,
+    outpath,
+    xlab="Dim 1",
+    ylab="Dim 2",
+    color_map=None,
+    order=None,
+    s=28,
+    legend_title=None,
+):
+    from pathlib import Path
+    outpath = Path(outpath); outpath.parent.mkdir(parents=True, exist_ok=True)
+
+    lbl = pd.Series(labels)
+    if pd.api.types.is_numeric_dtype(lbl):
+        uniq_vals = sorted(lbl.unique())
+        if -1 in uniq_vals:
+            uniq_vals = [v for v in uniq_vals if v != -1] + [-1]
+        uniq = [str(v) for v in uniq_vals]
+        lbl_str = lbl.astype(str)
+        legend_names = []
+        for u in uniq_vals:
+            if u == -1:
+                legend_names.append("Noise")
+            else:
+                legend_names.append(f"Cluster {int(u)+1}")
+    else:
+        lbl_str = lbl.astype(str).fillna("NA")
+        if order is None:
+            uniq = sorted(lbl_str.unique())
+        else:
+            present = [u for u in order if str(u) in set(lbl_str)]
+            rest = [u for u in lbl_str.unique() if u not in present]
+            uniq = present + sorted(rest)
+        legend_names = uniq
+
+    colors = []
+    if color_map is not None:
+        for u in uniq:
+            key = u if u in color_map else u.lower()
+            colors.append(color_map.get(key, "#9E9E9E"))
+    else:
+        # clean, professional palette (Tableau 20-ish extended) + reserved gray for Noise
+        base = ["#1f77b4","#ff7f0e","#2ca02c","#d62728","#9467bd",
+                "#8c564b","#e377c2","#7f7f7f","#bcbd22","#17becf",
+                "#4C78A8","#F58518","#54A24B","#E45756","#72B7B2",
+                "#EECA3B","#B279A2","#FF9DA6","#9D755D","#BAB0AC"]
+        # if there is a "Noise" class, make it light gray
+        if pd.api.types.is_numeric_dtype(lbl) and (-1 in lbl.unique()):
+            # map last label (Noise) to gray
+            need = len(uniq) - 1
+            while len(base) < need:
+                base = base + base
+            colors = base[:need] + ["#C0C0C0"]
+        else:
+            need = len(uniq)
+            while len(base) < need:
+                base = base + base
+            colors = base[:need]
+
+    # map label string -> palette index
+    idx_map = {u: i for i, u in enumerate(uniq)}
+    idx = lbl_str.map(idx_map).values
+    point_colors = [colors[i] for i in idx]
+
+    plt.figure(figsize=(7.2, 5.6), dpi=130)
+    plt.scatter(X2[:, 0], X2[:, 1], c=point_colors, s=s, alpha=0.95, edgecolors='none')
+    plt.xlabel(xlab); plt.ylabel(ylab); plt.title(title, pad=8)
+    plt.grid(True, linewidth=0.3, alpha=0.25)
+
+    handles = [plt.Line2D([0], [0], marker='o', linestyle='',
+                          markersize=6, markerfacecolor=colors[i],
+                          markeredgecolor='none') for i in range(len(uniq))]
+    if legend_title is None:
+        legend_title = "Cluster" if pd.api.types.is_numeric_dtype(lbl) else "Label"
+    if len(legend_names) <= 25:
+        plt.legend(handles, legend_names,
+                   bbox_to_anchor=(1.02, 1), loc='upper left',
+                   fontsize=9, frameon=False, title=legend_title)
+
+    plt.tight_layout()
+    plt.savefig(outpath, bbox_inches='tight')
+    plt.close()
+    
+def plot_pam50(X2, pam50_series, title, outpath, xlab, ylab):
+    outpath.parent.mkdir(parents=True, exist_ok=True)
+
+    # enforce canonical label order
+    ordered_labels = ["Basal-like", "Luminal A", "Luminal B", "HER2-enriched", "Normal-like"]
+    pam50 = pam50_series.astype(str).fillna("NA")
+
+    # color list in that order
+    colors = [PAM50_COLOR_MAP.get(lbl, "#999999") for lbl in ordered_labels]
+
+    # map label -> index for plotting
+    idx_map = {lbl: i for i, lbl in enumerate(ordered_labels)}
+    idx = [idx_map.get(v, -1) for v in pam50]
+    point_colors = [colors[i] if i >= 0 else "#999999" for i in idx]
+
+    plt.figure(figsize=(7, 5.5), dpi=130)
+    plt.scatter(X2[:, 0], X2[:, 1], c=point_colors, s=30, alpha=0.95, edgecolors="none")
+    plt.xlabel(xlab); plt.ylabel(ylab)
+    plt.title(title, pad=8)
+    plt.grid(True, linewidth=0.3, alpha=0.25)
+
+    # legend — fixed text order and color
+    handles = [plt.Line2D([0], [0], marker='o', linestyle='',
+                            markersize=6, markerfacecolor=colors[i],
+                            markeredgecolor='none')
+                for i in range(len(ordered_labels))]
+    legend_labels = ["Basal-like", "Luminal A", "Luminal B",
+                        "HER2-enriched", "Normal-like"]
+    plt.legend(handles, legend_labels,
+                bbox_to_anchor=(1.02, 1), loc='upper left',
+                fontsize=9, frameon=False, title="Subtype")
+
+    plt.tight_layout()
+    plt.savefig(outpath, bbox_inches="tight")
+    plt.close()
+
+def compute_embeddings(X, seed=0, n_pcs_feat=30):
+    # PCA for visualization (2D) and as preprocessor for UMAP
+    X_pca2 = PCA(n_components=2, random_state=seed).fit_transform(X)
+    X_pca30 = PCA(n_components=min(n_pcs_feat, X.shape[1]), random_state=seed).fit_transform(X)
+    
+    # UMAP on PCA-30
+    u10 = umap.UMAP(n_components=10, n_neighbors=10, min_dist=0.0,
+                    random_state=seed, metric="euclidean")
+    X_umap10 = u10.fit_transform(X_pca30)
+
+    u2 = umap.UMAP(n_components=2, n_neighbors=10, min_dist=0.0,
+                   random_state=seed, metric="euclidean")
+    X_umap2 = u2.fit_transform(X_pca30)
+
+    return X_pca2, X_pca30, X_umap10, X_umap2
+
+def clustering_all(X_umap10, X_umap2, X_spectral_input, outdir: Path, seed=0):
+    k = 5  # PAM50 count
+
+    labels = KMeans(n_clusters=k, n_init=20, random_state=seed).fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "KMeans (K=5) — UMAP view",
+        outdir / "cluster__kmeans_k5_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+
+    # Spectral on PCA
+    labels = SpectralClustering(
+        n_clusters=k, affinity="nearest_neighbors",
+        n_neighbors=10, assign_labels="kmeans",
+        random_state=seed, n_init=10
+    ).fit_predict(X_spectral_input)
+    scatter_by_labels(
+        X_umap2, labels, 
+        "Spectral (fit on PCA, view in UMAP)",
+        outdir / "cluster__spectral_pca_umap2.png", 
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+
+    labels = GaussianMixture(
+        n_components=k, covariance_type="full",
+        random_state=seed, n_init=5
+    ).fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "GMM (K=5, full) — UMAP view",
+        outdir / "cluster__gmm_k5_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+
+    labels = DBSCAN(eps=0.5, min_samples=10, metric="euclidean").fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "DBSCAN (eps=0.5, min=10) — UMAP view",
+        outdir / "cluster__dbscan_eps0p5_min10_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+
+    new_api = vparse(sklearn.__version__) >= vparse("1.2")
+
+    labels = AgglomerativeClustering(n_clusters=k, linkage="ward").fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "Agglomerative — ward (K=5) — UMAP view",
+        outdir / "cluster__agg_ward_k5_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+    
+    if new_api:
+        model = AgglomerativeClustering(n_clusters=k, linkage="average", metric="euclidean")
+    else:
+        model = AgglomerativeClustering(n_clusters=k, linkage="average", affinity="euclidean")
+    labels = model.fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "Agglomerative — average (K=5) — UMAP view",
+        outdir / "cluster__agg_average_k5_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
+
+    if new_api:
+        model = AgglomerativeClustering(n_clusters=k, linkage="complete", metric="euclidean")
+    else:
+        model = AgglomerativeClustering(n_clusters=k, linkage="complete", affinity="euclidean")
+    labels = model.fit_predict(X_umap10)
+    scatter_by_labels(
+        X_umap2, labels,
+        "Agglomerative — complete (K=5) — UMAP view",
+        outdir / "cluster__agg_complete_k5_umap2.png",
+        "UMAP Dim 1", "UMAP Dim 2",
+        legend_title="Cluster"
+    )
 
 
+def run(
+    data_path="Homework 2/Code/Data/BRCA_data.csv",
+    outdir="Homework 2/Code/Result/Problem_2",
+    seed=25
+):
+    outdir = Path(outdir); outdir.mkdir(parents=True, exist_ok=True)
+
+    # data
+    X, meta = load_brca(data_path)
+    pam50 = meta["subtype"] if "subtype" in meta.columns else pd.Series(["NA"] * X.shape[0])
+
+    # embeddings (PCA-2 and UMAP-2 are the only two embedding figures we save)
+    X_pca2, X_pca30, X_umap10, X_umap2 = compute_embeddings(X, seed=seed, n_pcs_feat=30)
+    plot_pam50(X_pca2, pam50, "PAM50 — PCA (2D)",
+               outdir / "pam50__pca2.png", "PCA Dim 1", "PCA Dim 2")
+    plot_pam50(X_umap2, pam50, "PAM50 — UMAP (2D)",
+               outdir / "pam50__umap2.png", "UMAP Dim 1", "UMAP Dim 2")
+    clustering_all(X_umap10, X_umap2, X_pca30, outdir, seed=seed)
+
+
+if __name__ == "__main__":
+    import argparse
+    parser = argparse.ArgumentParser()
+    parser.add_argument("--data_path", type=str, default="Homework 2/Code/Data/BRCA_data.csv")
+    parser.add_argument("--outdir", type=str, default="Homework 2\Latex\Figures")
+    parser.add_argument("--seed", type=int, default=25)
+    args = parser.parse_args()
+    run(data_path=args.data_path, outdir=args.outdir, seed=args.seed)
+\end{python}
+
+\subsection{Problem 2b}
+\begin{python}
+'''
+Author: Chuyang Su cs4570@columbia.edu
+Date: 2025-10-31 02:09:44
+LastEditTime: 2025-10-31 02:50:01
+FilePath: /Unsupervised-Learning-Homework/Homework 2/Code/Problem_2_b.py
+Description: 
+    Validation.
+'''
+import os
+os.environ.setdefault("OMP_NUM_THREADS", "2")
+os.environ.setdefault("MKL_NUM_THREADS", "2")
+os.environ.setdefault("LOKY_MAX_CPU_COUNT", "8")
+
+import warnings
+warnings.filterwarnings("ignore")
+
+from pathlib import Path
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+from pathlib import Path
+
+from packaging.version import parse as vparse
+import sklearn
+from sklearn.cluster import KMeans, SpectralClustering, AgglomerativeClustering, DBSCAN
+from sklearn.mixture import GaussianMixture
+from sklearn.metrics import silhouette_score, adjusted_rand_score
+from sklearn.neighbors import KNeighborsClassifier
+from sklearn.utils import check_random_state
+
+from Problem_2_a import load_brca, compute_embeddings
+
+def _kmeans_fit_predict(X, k, seed):
+    return KMeans(n_clusters=k, n_init=20, random_state=seed).fit_predict(X)
+
+def _gmm_fit_predict(X, k, seed):
+    gm = GaussianMixture(n_components=k, covariance_type="full", random_state=seed, n_init=5)
+    return gm.fit_predict(X), gm
+
+def _spectral_fit_predict(X_pca30, k, seed):
+    return SpectralClustering(
+        n_clusters=k, affinity="nearest_neighbors",
+        n_neighbors=10, assign_labels="kmeans",
+        random_state=seed, n_init=10
+    ).fit_predict(X_pca30)
+
+def _agglo_fit_predict(X, k, linkage):
+    new_api = vparse(sklearn.__version__) >= vparse("1.2")
+    if linkage == "ward":
+        model = AgglomerativeClustering(n_clusters=k, linkage="ward")
+    else:
+        if new_api:
+            model = AgglomerativeClustering(n_clusters=k, linkage=linkage, metric="euclidean")
+        else:
+            model = AgglomerativeClustering(n_clusters=k, linkage=linkage, affinity="euclidean")
+    return model.fit_predict(X)
+
+def _dbscan_fit_predict(X, eps, min_samples):
+    return DBSCAN(eps=eps, min_samples=min_samples, metric="euclidean").fit_predict(X)
+
+def _silhouette_safe(X, labels):
+    labs = np.asarray(labels)
+    if len(np.unique(labs)) <= 1 or np.all(labs == -1):
+        return np.nan
+    try:
+        return silhouette_score(X, labs)
+    except Exception:
+        return np.nan
+
+def _bootstrap_stability(X, fit_fn, n_boot=10, seed=0):
+    rng = check_random_state(seed)
+    full_labels = fit_fn(X)
+    if len(np.unique(full_labels)) <= 1:
+        return np.nan
+    n = X.shape[0]
+    aris = []
+    for _ in range(n_boot):
+        idx = rng.choice(n, size=int(0.8 * n), replace=False)
+        boot_labels = fit_fn(X[idx])
+        if len(np.unique(boot_labels)) <= 1:
+            aris.append(np.nan)
+        else:
+            aris.append(adjusted_rand_score(full_labels[idx], boot_labels))
+    aris = np.array(aris, dtype=float)
+    return float(np.nanmedian(aris))
+
+def _generalizability_test_silhouette(X, labels, tag, k=None, seed=0):
+    """
+    80/20 split: fit clusterer on train, assign test labels via:
+      - kmeans/gmm: model predict
+      - spectral/agg/dbscan: kNN(label transfer) from train to test
+    Return test silhouette.
+    """
+    rng = check_random_state(seed)
+    n = X.shape[0]
+    perm = rng.permutation(n)
+    cut = int(0.8 * n)
+    tr, te = perm[:cut], perm[cut:]
+    Xtr, Xte = X[tr], X[te]
+
+    # fit on train
+    if tag == "kmeans":
+        km = KMeans(n_clusters=k, n_init=20, random_state=seed).fit(Xtr)
+        yte = km.predict(Xte)
+    elif tag == "gmm":
+        gm = GaussianMixture(n_components=k, covariance_type="full", random_state=seed, n_init=5).fit(Xtr)
+        yte = gm.predict(Xte)
+    else:
+        # label transfer by kNN with train labels from full-data 'labels'
+        ytr = np.asarray(labels)[tr]
+        knn = KNeighborsClassifier(n_neighbors=10, weights="distance")
+        knn.fit(Xtr, ytr)
+        yte = knn.predict(Xte)
+
+    return _silhouette_safe(Xte, yte)
+
+# ----------------- validation core -----------------
+def validate_all(
+    X_pca30, X_umap10,
+    K_grid=range(2, 10),
+    dbscan_eps=(0.3, 0.4, 0.5, 0.6, 0.7),
+    dbscan_min_samples=(5, 10, 15),
+    n_boot=10,
+    seed=25
+):
+    rng = check_random_state(seed)
+    records = []
+
+    # --- K-based methods ---
+    for K in K_grid:
+        # KMeans (fit/view on UMAP10)
+        km_labels = _kmeans_fit_predict(X_umap10, K, seed)
+        sil = _silhouette_safe(X_umap10, km_labels)
+        stab = _bootstrap_stability(X_umap10, lambda Z: _kmeans_fit_predict(Z, K, rng.randint(1e9)), n_boot, seed)
+        gen = _generalizability_test_silhouette(X_umap10, km_labels, "kmeans", k=K, seed=seed)
+        records.append(("kmeans", K, np.nan, np.nan, sil, stab, gen))
+
+        # GMM (UMAP10)
+        gmm_labels, _ = _gmm_fit_predict(X_umap10, K, seed)
+        sil = _silhouette_safe(X_umap10, gmm_labels)
+        stab = _bootstrap_stability(X_umap10, lambda Z: _gmm_fit_predict(Z, K, rng.randint(1e9))[0], n_boot, seed)
+        gen = _generalizability_test_silhouette(X_umap10, gmm_labels, "gmm", k=K, seed=seed)
+        records.append(("gmm", K, np.nan, np.nan, sil, stab, gen))
+
+        # Spectral (fit on PCA30)
+        sp_labels = _spectral_fit_predict(X_pca30, K, seed)
+        sil = _silhouette_safe(X_pca30, sp_labels)
+        stab = _bootstrap_stability(X_pca30, lambda Z: _spectral_fit_predict(Z, K, rng.randint(1e9)), n_boot, seed)
+        gen = _generalizability_test_silhouette(X_pca30, sp_labels, "spectral", k=K, seed=seed)
+        records.append(("spectral_pca", K, np.nan, np.nan, sil, stab, gen))
+
+        # Agglomerative (UMAP10): ward/average/complete
+        for lk in ("ward", "average", "complete"):
+            ag_labels = _agglo_fit_predict(X_umap10, K, lk)
+            sil = _silhouette_safe(X_umap10, ag_labels)
+            stab = _bootstrap_stability(X_umap10, lambda Z, _lk=lk: _agglo_fit_predict(Z, K, _lk), n_boot, seed)
+            gen = _generalizability_test_silhouette(X_umap10, ag_labels, f"agg_{lk}", k=K, seed=seed)
+            records.append((f"agg_{lk}", K, np.nan, np.nan, sil, stab, gen))
+
+    # --- DBSCAN grid (UMAP10) ---
+    for eps in dbscan_eps:
+        for m in dbscan_min_samples:
+            db_labels = _dbscan_fit_predict(X_umap10, eps, m)
+            sil = _silhouette_safe(X_umap10, db_labels)
+            stab = _bootstrap_stability(
+                X_umap10, lambda Z, _e=eps, _m=m: _dbscan_fit_predict(Z, _e, _m), n_boot, seed
+            )
+            gen  = _generalizability_test_silhouette(X_umap10, db_labels, "dbscan", k=None, seed=seed)
+            records.append(("dbscan", np.nan, eps, m, sil, stab, gen))
+
+    cols = ["method", "K", "eps", "min_samples", "silhouette", "stability", "generalizability"]
+    return pd.DataFrame.from_records(records, columns=cols)
+
+def pick_best_per_method(df: pd.DataFrame) -> pd.DataFrame:
+    out = []
+    for meth in df["method"].unique():
+        sub = df[df["method"] == meth].copy()
+        if sub.empty: 
+            continue
+        # rank by (silhouette, stability, generalizability)
+        sub["_rank"] = list(zip(-sub["silhouette"].fillna(-1e9),
+                                -sub["stability"].fillna(-1e9),
+                                -sub["generalizability"].fillna(-1e9)))
+        sub = sub.sort_values("_rank").drop(columns=["_rank"])
+        out.append(sub.iloc[[0]])
+    return pd.concat(out, ignore_index=True) if out else pd.DataFrame()
+
+def run(
+    data_path="Homework 2/Code/Data/BRCA_data.csv",
+    outdir="Homework 2/Code/Result/Problem_2",
+    seed=25
+):
+    outdir = Path(outdir); outdir.mkdir(parents=True, exist_ok=True)
+
+    # data + embeddings (reuse 2a)
+    X, _ = load_brca(data_path)
+    # (pca2 not needed here)
+    _, X_pca30, X_umap10, _ = compute_embeddings(X, seed=seed, n_pcs_feat=30)
+
+    # validation
+    df = validate_all(
+        X_pca30, X_umap10,
+        K_grid=range(2, 10),
+        dbscan_eps=(0.3, 0.4, 0.5, 0.6, 0.7),
+        dbscan_min_samples=(5, 10, 15),
+        n_boot=10,
+        seed=seed
+    )
+
+    # save all + best-per-method
+    all_csv = outdir / "problem2b_validation.csv"
+    best_csv = outdir / "problem2b_best.csv"
+    df.to_csv(all_csv, index=False)
+    pick_best_per_method(df).to_csv(best_csv, index=False)
+    
+    dfk = df[df["K"].notna()].copy()
+    dfk["K"] = dfk["K"].astype(int)
+
+    # unify method labels for legend
+    label_map = {
+        "kmeans": "KMeans",
+        "gmm": "GMM",
+        "spectral_pca": "Spectral (PCA)",
+        "agg_ward": "Agg-Ward",
+        "agg_average": "Agg-Average",
+        "agg_complete": "Agg-Complete",
+    }
+    dfk["Method"] = dfk["method"].map(label_map)
+
+    palette = {
+        "KMeans": "#1f77b4",
+        "GMM": "#2ca02c",
+        "Spectral (PCA)": "#ff7f0e",
+        "Agg-Ward": "#9467bd",
+        "Agg-Average": "#d62728",
+        "Agg-Complete": "#8c564b",
+    }
+
+    # ---- plotting helper ----
+    def plot_metric(metric, ylabel):
+        plt.figure(figsize=(7,5), dpi=130)
+        sns.lineplot(data=dfk, x="K", y=metric, hue="Method", marker="o", palette=palette)
+        plt.xlabel("Number of Clusters (K)")
+        plt.ylabel(ylabel)
+        plt.title(f"{ylabel} vs K across clustering methods")
+        plt.legend(bbox_to_anchor=(1.02,1), loc="upper left", frameon=False)
+        plt.grid(True, linewidth=0.4, alpha=0.3)
+        plt.tight_layout()
+        plt.savefig(outdir / f"validation_{metric.lower()}_vs_K.png", bbox_inches="tight")
+        plt.close()
+
+    # ---- draw three figures ----
+    plot_metric("silhouette", "Silhouette Score")
+    plot_metric("stability", "Stability (Bootstrap ARI)")
+    plot_metric("generalizability", "Generalizability (Test Silhouette)")
+
+if __name__ == "__main__":
+    import argparse
+    parser = argparse.ArgumentParser()
+    parser.add_argument("--data_path", type=str, default="Homework 2/Code/Data/BRCA_data.csv")
+    parser.add_argument("--outdir", type=str, default="Homework 2/Latex/Figures")
+    parser.add_argument("--seed", type=int, default=25)
+    args = parser.parse_args()
+    run(data_path=args.data_path, outdir=args.outdir, seed=args.seed)
+\end{python}
+
+\subsection{Problem 2c.}
+\begin{python}
+'''
+Author: Chuyang Su cs4570@columbia.edu
+Date: 2025-10-31 02:57:20
+LastEditTime: 2025-10-31 02:57:22
+FilePath: /Unsupervised-Learning-Homework/Homework 2/Code/Problem_2_c.py
+Description: 
+    plot the best model.
+'''
+import os
+os.environ.setdefault("OMP_NUM_THREADS", "2")
+os.environ.setdefault("MKL_NUM_THREADS", "2")
+
+import warnings
+warnings.filterwarnings("ignore")
+
+from pathlib import Path
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+
+from sklearn.cluster import AgglomerativeClustering
+from sklearn.metrics import adjusted_rand_score, normalized_mutual_info_score
+
+from Problem_2_a import load_brca, compute_embeddings, scatter_by_labels
+
+def best_clustering_labels(X_umap10, k=2):
+    model = AgglomerativeClustering(n_clusters=k, linkage="average")
+    return model.fit_predict(X_umap10)
+
+def run(
+    data_path="Homework 2/Code/Data/BRCA_data.csv",
+    outdir="Homework 2/Code/Result/Problem_2",
+    seed=25
+):
+    outdir = Path(outdir)
+    outdir.mkdir(parents=True, exist_ok=True)
+
+    X, meta = load_brca(data_path)
+    X_pca2, X_pca30, X_umap10, X_umap2 = compute_embeddings(X, seed=seed, n_pcs_feat=30)
+
+    pam50 = meta["subtype"].astype(str).fillna("NA").values
+    labels_best = best_clustering_labels(X_umap10, k=2)
+
+    ari = adjusted_rand_score(pam50, labels_best)
+    nmi = normalized_mutual_info_score(pam50, labels_best)
+    print(f"ARI = {ari:.3f}, NMI = {nmi:.3f}")
+
+    # Define consistent color map
+    PAM50_COLOR_MAP = {
+        "Luminal A": "#1f77b4",
+        "Luminal B": "#2ca02c",
+        "Basal-like": "#ff7f0e",
+        "HER2-enriched": "#d62728",
+        "Normal-like": "#9467bd",
+    }
+
+    # Best clustering (Agg-Average, K=2)
+    cmap_best = {str(i): c for i, c in enumerate(["#4C78A8", "#E45756"])}
+    scatter_by_labels(
+        X_umap2, labels_best.astype(str),
+        title="Best Clustering (Agglomerative Average, K=2)",
+        outpath=outdir / "2c_bestcluster_umap2.png",
+        color_map=cmap_best,
+        legend_title="Cluster"
+    )
+
+    # Combined overlay (color by PAM50, edge by cluster)
+    df_plot = pd.DataFrame({
+        "x": X_umap2[:,0], "y": X_umap2[:,1],
+        "Cluster": labels_best.astype(str),
+        "Subtype": pam50
+    })
+
+    plt.figure(figsize=(7,5.5), dpi=130)
+    sns.scatterplot(
+        data=df_plot, x="x", y="y",
+        hue="Subtype", style="Cluster",
+        palette=PAM50_COLOR_MAP, alpha=0.9, s=28
+    )
+    plt.title(f"Overlay of PAM50 and Best Clustering (ARI={ari:.2f}, NMI={nmi:.2f})")
+    plt.xlabel("UMAP-1"); plt.ylabel("UMAP-2")
+    plt.legend(bbox_to_anchor=(1.02,1), loc="upper left", frameon=False)
+    plt.grid(True, linewidth=0.3, alpha=0.3)
+    plt.tight_layout()
+    plt.savefig(outdir / "2c_overlay_umap2.png", bbox_inches="tight")
+    plt.close()
+
+if __name__ == "__main__":
+    import argparse
+    parser = argparse.ArgumentParser()
+    parser.add_argument("--data_path", type=str, default="Homework 2/Code/Data/BRCA_data.csv")
+    parser.add_argument("--outdir", type=str, default="Homework 2/Latex/Figures")
+    parser.add_argument("--seed", type=int, default=25)
+    args = parser.parse_args()
+    run(data_path=args.data_path, outdir=args.outdir, seed=args.seed)
+\end{python}
 \end{document}
