--- a/Homework 3/Latex/Homework3_cs4570.tex
+++ b/Homework 3/Latex/Homework3_cs4570.tex
@@ -138,5 +138,7 @@ This preliminary analysis confirms the existence of strong, sector-specific depe
     \label{fig:sector_correlations}
 \end{figure}
 
+\subsection{Graphical Lasso.}
+
 
 \end{document}
