--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -87,6 +87,24 @@
    "source": [
     "除此以外，我还绘制了各公司的累计回报和行业或板块内部的回报相关性。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "374afce3",
+   "metadata": {},
+   "source": [
+    "### (b) Fit undirected graphical models via the Graphical Lasso and a non-parametric version of the Graphical Lasso. \n",
+    "\n",
+    "You should use proper hyperparameter tuning to determine the sparsity of the graph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d207f97",
+   "metadata": {},
+   "source": [
+    "最终结果如图（Homework 3\\Latex\\Figures\\1b_glasso_precision_matrices.png）所示，可以看到两张图其实结果几乎完全一致，这一方面是由于我在进行标准glasso之前先对数据进行了标准化处理使得其更贴近高斯分布，另一方面Because the dependence structure of daily stock returns is very close to a Gaussian copula, the rank-based covariance matrix used in the nonparanormal GL is almost identical to the sample covariance used in the Gaussian GL. As a result, both methods recover essentially the same precision matrix and the same graph structure."
+   ]
   }
  ],
  "metadata": {
