--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -103,7 +103,14 @@
    "id": "0d207f97",
    "metadata": {},
    "source": [
-    "最终结果如图（Homework 3\\Latex\\Figures\\1b_glasso_precision_matrices.png）所示，可以看到两张图其实结果几乎完全一致，这一方面是由于我在进行标准glasso之前先对数据进行了标准化处理使得其更贴近高斯分布，另一方面Because the dependence structure of daily stock returns is very close to a Gaussian copula, the rank-based covariance matrix used in the nonparanormal GL is almost identical to the sample covariance used in the Gaussian GL. As a result, both methods recover essentially the same precision matrix and the same graph structure."
+    "最终结果如图（Homework 3\\Latex\\Figures\\1b_glasso_precision_matrices.png）所示，可以看到两张图几乎完全一致，这说明股票数据股票收益虽然 heavy-tailed，但在依赖结构上已经很接近 Gaussian copula 了，因此 Spearman-based nonparanormal GL 与 Gaussian GL 结果高度一致，由此我可以进行推断：这个数据的条件依赖结构稳定、低维且主要由行业因子驱动。   \n",
+    "\n",
+    "从结果上看，Amazon和可口可乐之间形成了极强的条件相关性，类似的还有JPM和Google，沃尔玛和美国银行，英伟达和PFE等，也都有较为明显的条件相关关系，说明在固定了其他因子的条件下，这些组合的收益率会受到彼此的显著影响。从聚类形态上看，apple，msft，Google，Amazon和meta形成了一个正相关的簇（图中下三角的上半部），虽然从事实上讲nvidia应该也是其中之一，但是在图中并没有显示出明显的相关性，结合累计回报曲线看，这可能是由于nvidia在这段时间的异常表现（一骑绝尘，而且波动很大）所致。另外，在这张图中还能看到比较稀奇的nvidia以及bac和jnj的负相关关系，好似是jnj越好，这俩家的收益越糟。我认为这并不是由于任何市场因素，应该是2025年初的事件导致。\n",
+    "\n",
+    "我们应用了从log10(0.01)到log10(0.8)共30个点的grid search，通过cross-validated Gaussian log-likelihood 选出最优 α。最终选择了：\n",
+    "Standard GL Best Alpha: 0.021287\n",
+    "Non-Parametric GL Best Alpha: 0.013528\n",
+    "由于篇幅受限，所以仅展示standard glasso的调参过程（Homework 3\\Latex\\Figures\\1b_glasso_cv_curve.png）。"
    ]
   }
  ],
