--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -112,6 +112,16 @@
     "Non-Parametric GL Best Alpha: 0.013528\n",
     "由于篇幅受限，所以仅展示standard glasso的调参过程（Homework 3\\Latex\\Figures\\1b_glasso_cv_curve.png）。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "725b027d",
+   "metadata": {},
+   "source": [
+    "### (c) Fit a directed graphical model via the PC algorithm or a structural equation model. \n",
+    "\n",
+    "You should again tune any hyperparameters to determine graph sparsity."
+   ]
   }
  ],
  "metadata": {
