--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -122,6 +122,14 @@
     "\n",
     "You should again tune any hyperparameters to determine graph sparsity."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32f4b58",
+   "metadata": {},
+   "source": [
+    "我通过计算每张图的bic score来衡量模型在alphas=[0.001, 0.01, 0.05, 0.1, 0.2]的表现，默认最好的alpha依旧是约定俗成的5%，最终的结果如图（Figures\\1c_pc_tuning.png）所示模型在alpha为0.1的时候达到了最低的bic score，因此选择alpha=0.1进行建图，最终结果如图（Figures\\1c_pc_graph.png）所示。"
+   ]
   }
  ],
  "metadata": {
