--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -130,6 +130,24 @@
    "source": [
     "我通过计算每张图的bic score来衡量模型在alphas=[0.001, 0.01, 0.05, 0.1, 0.2]的表现，默认最好的alpha依旧是约定俗成的5%，最终的结果如图（Figures\\1c_pc_tuning.png）所示模型在alpha为0.1的时候达到了最低的bic score，因此选择alpha=0.1进行建图，最终结果如图（Figures\\1c_pc_graph.png）所示。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aea6aa1",
+   "metadata": {},
+   "source": [
+    "### (d) Compare and interpret your graphical model estimates. Do the graphs relate companies as you would expect?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59cc3b97",
+   "metadata": {},
+   "source": [
+    "从c的结果中可以看到科技股之间的依赖关系要明显多于其余板块，比如微软，应该是所有其余科技股的子结点，而NVIDIA与谷歌除了彼此之间的无向边之外是其余所有连向他们的结点的父亲结点，这说明科技股之间是有着显著、方向明确的依赖关系的，这点与b的结论相同。其余的公司则展现的是相对孤立的状态，比如美孚，仅仅与同板块的雪佛兰有一条依赖关系，这说明在给定雪佛兰的情况下，美孚甚至是与整个池中的其余个股完全独立的，突出了能源板块之间的强关联以及与其余板块之间“置身事外”的孤立性。\n",
+    "\n",
+    "比较有趣的地方在于b的结果中展现出显著依赖关系的KO-AMZN和JPM-GOOGL，在c的结果中却都没有展示出比较直接的联系，展示出有向图构建与glasso的逻辑区别。但是其中的联系也并不一定弱，比如KO可以通过苹果或者沃尔玛两个方式与Amazon构建联系，这点似乎也符合事实的直觉。"
+   ]
   }
  ],
  "metadata": {
