--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -148,6 +148,39 @@
     "\n",
     "比较有趣的地方在于b的结果中展现出显著依赖关系的KO-AMZN和JPM-GOOGL，在c的结果中却都没有展示出比较直接的联系，展示出有向图构建与glasso的逻辑区别。但是其中的联系也并不一定弱，比如KO可以通过苹果或者沃尔玛两个方式与Amazon构建联系，这点似乎也符合事实的直觉。"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "250f1e88",
+   "metadata": {},
+   "source": [
+    "### (e) Fit a Granger causal graphical model or a Vector Autoregressive Model (order 1 is fine) to this same data. Properly tune any hyperparameters. \n",
+    "Does this order 1 model fit the data well? Interpret your results and compare these with your previous graph estimates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "595d4992",
+   "metadata": {},
+   "source": [
+    "--- Granger Causality Test Results ---\n",
+    "Significance level: 0.05\n",
+    "Number of significant Granger causal relationships: 52\n",
+    "Graph density: 0.248\n",
+    "\n",
+    "Top 10 strongest Granger causal relationships:\n",
+    "Cause Effect  P-value  Lag\n",
+    " META   AMZN 0.000002    1\n",
+    " AAPL    JPM 0.000089    4\n",
+    "  WMT     PG 0.000165    3\n",
+    " AAPL   META 0.000319    4\n",
+    "  WMT     KO 0.000415    1\n",
+    " MSFT     PG 0.000963    4\n",
+    " AAPL   MSFT 0.001364    3\n",
+    "  BAC   AAPL 0.001686    2\n",
+    " AAPL   AMZN 0.002355    4\n",
+    " AAPL    BAC 0.002579    3"
+   ]
   }
  ],
  "metadata": {
