--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -181,6 +181,41 @@
     " AAPL   AMZN 0.002355    4\n",
     " AAPL    BAC 0.002579    3"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dc1ee94",
+   "metadata": {},
+   "source": [
+    "## Problem 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2c5290a",
+   "metadata": {},
+   "source": [
+    "### (a) Apply kernel density estimation to this data and use this to generate new samples.\n",
+    "You may apply kernel density estimation in a different space than the original data. You should also tune the bandwidth parameter. Are the samples generated from this density estimator recognizable as digits?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c72859",
+   "metadata": {},
+   "source": [
+    "Dataset shape: (1797, 64)\n",
+    "Number of classes: 10\n",
+    "Pixel value range: [0.0, 16.0]\n",
+    "Mean pixel value: 4.88 ± 6.02\n",
+    "Hyperparameter Tuning: Bandwidth Selection\n",
+    "  Best bandwidth: 0.579639\n",
+    "  Cross-validation score: -8081.7343\n",
+    "  Best bandwidth: 0.579639\n",
+    "  Cross-validation score: -22008.9223\n",
+    "  Best bandwidth: 0.454878\n",
+    "  Cross-validation score: -19606.1587"
+   ]
   }
  ],
  "metadata": {
