--- a/Homework 3/Latex/script.ipynb
+++ b/Homework 3/Latex/script.ipynb
@@ -216,6 +216,47 @@
     "  Best bandwidth: 0.454878\n",
     "  Cross-validation score: -19606.1587"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7cd1e64",
+   "metadata": {},
+   "source": [
+    "Mean (Original):     4.8842\n",
+    "Mean (Generated):    4.9478\n",
+    "Std  (Original):     6.0168\n",
+    "Std  (Generated):    5.6388\n",
+    "Sparsity (Original): 0.4893\n",
+    "Sparsity (Generated):0.2391\n",
+    "KNN Accuracy (Original): 0.9627"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "375abf98",
+   "metadata": {},
+   "source": [
+    "对于kde而言唯一重要的参数是band width h，所以我在这部分实验中对bandwith进行了grid search，对每个带宽应用5折cv进行验证kde.score(X_test)并返回平均对数似然，取其中最大的。图Figures\\2a_kde_tuning.png展示的是kde模型分别在应用了pca降维到20、50以及原始空间上的不同最优带宽。由于kde在直接应用到原始空间时往往会出现维度灾难，因此我必须先将其降至低维后再进行kde采样，在后面的实验中我均选择采用pca20的模型，因此其余两个空间下的结果仅作展示用。\n",
+    "\n",
+    "图Figures\\2a_kde_tuning.png展示了生成的数据，可以看到一部分数字是颇有辨识度的，比如5 8 0 1 4等。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7444b801",
+   "metadata": {},
+   "source": [
+    "对带宽参数h进行了网格搜索，在三个空间（PCA-20/50和原始64维）上分别使用5折交叉验证选择最优值，以平均对数似然为评价标准。由于原始空间的CV得分显著恶化（-19606 vs -8081），验证了维度灾难的影响，因此选择PCA-20空间（最优h=0.580）进行后续采样。生成样本的像素强度分布与原始数据高度匹配（均值4.88 vs 4.95，标准差6.02 vs 5.64），但空间结构存在差异：生成样本的稀疏度仅为23.91%，相比原始的48.93%低50%，表明KDE倾向于生成更密集的像素分布，导致一些数字（1、0、8等）清晰可辨，但整体对比度不足。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61165374",
+   "metadata": {},
+   "source": [
+    "### (b) Build a Variational Autoencoder (VAE) OR a Generative Adversarial Network (GAN) to generate new samples.\n",
+    "Rigorously tune any hyperparameters.Are the samples generated recognizable as digits? Are all possible digits generated?"
+   ]
   }
  ],
  "metadata": {
